<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Fragment Sections -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="settings">Settings</string>
    <!-- Viewpager Titles -->
    <string name="title_clock">Clock</string>
    <string name="title_graph">Graph</string>
    <!-- Category: Clock Preferences -->
    <string name="pref_category_clock_key">key_pref_clock_category</string>
    <string name="pref_category_clock_title">Clock Preferences</string>
    <!-- Values: Clock Type -->
    <string name="clock_analogue">Analogue</string>
    <string name="clock_digital">Digital</string>
    <string name="clock_fusion">Fusion</string>
    <!-- List Preference Clock Type -->
    <string name="pref_clock_type_key">key_pref_clock_type</string>
    <string name="pref_clock_type_default">@string/clock_analogue</string>
    <string name="pref_clock_type_title">Clock Style</string>
    <string name="pref_clock_type_list_title">Select a Clock Style</string>
    <string name="pref_clock_type_summary">Set clock style (analogue, fusion or digital)</string>
    <!-- Preference Alarm Interval -->
    <string name="pref_alarm_interval_key">key_pref_clock_interval</string>
    <string name="pref_alarm_interval_summary">Set time between alarms</string>
    <string name="pref_alarm_interval_title">Alarm Intervals</string>
    <string name="pref_time_started">"Key_1_Time_Started"</string>
    <!-- Preference Snooze Interval -->
    <string name="pref_snooze_interval_key">key_pref_snooze_interval</string>
    <string name="pref_snooze_interval_summary">Set snooze delay</string>
    <string name="pref_snooze_interval_title">Snooze Time</string>
    <!-- Category: Notification Preferences -->
    <string name="pref_category_notifications_key">key_pref_notifications_category</string>
    <string name="pref_category_notifications_title">Notification Preferences</string>
    <!-- Values: Notification Type -->
    <string name="notif_app">Application Specific</string>
    <string name="notif_system">System Defaults</string>
    <!-- List Preference Notification Type -->
    <string name="pref_notification_type_key">key_pref_notification_type</string>
    <string name="pref_notification_type_default">@string/notif_app</string>
    <string name="pref_notification_type_list_title">Select a Notification Style</string>
    <string name="pref_notification_type_summary">Choose notification type</string>
    <string name="pref_notification_type_title">Notification Type</string>
    <!-- Category: Theme Preferences -->
    <string name="pref_category_theme_key">key_pref_category_theme</string>
    <string name="pref_category_theme_title">Theme Preferences</string>
    <!-- Values: Theme Color -->
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <!-- List Preference Theme Type -->
    <string name="pref_theme_default">@string/theme_dark</string>
    <string name="pref_theme_list_title">Theme Selection</string>
    <string name="pref_theme_key">key_pref_theme</string>
    <string name="pref_theme_summary">Edit application theme</string>
    <string name="pref_theme_title">Application Theme</string>
    <!-- Category: Sensor Preferences -->
    <string name="pref_category_sensor_key">key_pref_sensor</string>
    <string name="pref_category_sensor_title">Sensor Preferences</string>
    <!-- Sensor Mode Values -->
    <string name="sensor_mode_a">Off</string>
    <string name="sensor_mode_b">Low Accuracy</string>
    <string name="sensor_mode_c">High Accuracy</string>
    <!-- List Preference Sensor Mode -->
    <string name="pref_sensor_modes_default">@string/sensor_mode_a</string>
    <string name="pref_sensor_modes_list_title">Pedometer Sensor Status</string>
    <string name="pref_sensor_modes_key">key_pref_sensor_modes</string>
    <string name="pref_sensor_modes_summary">Reset the clock automatically whenever the device moves by enabling the pedometer (will increase power consumption)</string>
    <string name="pref_sensor_modes_title">Pedometer Mode</string>
    <!-- Dialog Strings -->
    <string name="dialog_msg_sensor_failed">Pedometer sensor couldn\'t be initialised. Setting preferences to \"Off\"&#8230;</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_user_button">Got it!</string>
    <!-- Graph Labels -->
    <string name="graph_title">Time Idle (minutes)</string>
    <string name="graph_x">Time of Day</string>
    <string name="graph_y">Minutes</string>
    <string name="graph_chart_title">Time Idle Chart</string>
    <!-- Font Names -->
    <string name="font_a_name">Digital-7</string>
    <string name="font_b_name">NinePin</string>
    <string name="font_c_name">Repetition Scrolling</string>
    <!-- Font Values -->
    <string name="font_a">digital_7_mono.ttf</string>
    <string name="font_b">ninepin.ttf</string>
    <string name="font_c">repet.ttf</string>
    <!-- Color Array Names -->
    <string name="holo_blue_light">Blue (Light)</string>
    <string name="holo_gray_light">Gray (Light)</string>
    <string name="holo_green_light">Green (Light)</string>
    <string name="holo_red_light">Red (Light)</string>
    <string name="holo_blue_dark">Blue (Dark)</string>
    <string name="holo_green_dark">Green (Dark)</string>
    <string name="holo_red_dark">Red (Dark)</string>
    <string name="holo_purple">Purple (Dark)</string>
    <string name="holo_orange_light">Orange (Light)</string>
    <string name="holo_orange_dark">Orange (Dark)</string>
    <string name="holo_blue_bright">Blue (Bright)</string>
    <string name="holo_gray_dark">Gray (Dark)</string>
    <!-- Color Array Values -->
    <string name="holo_value_blue_light">#ff33b5e5</string>
    <string name="holo_value_gray_light">#CCCCCC</string>
    <string name="holo_value_green_light">#ff99cc00</string>
    <string name="holo_value_red_light">#ffff4444</string>
    <string name="holo_value_blue_dark">#ff0099cc</string>
    <string name="holo_value_green_dark">#ff669900</string>
    <string name="holo_value_red_dark">#ffcc0000</string>
    <string name="holo_value_purple">#ffaa66cc</string>
    <string name="holo_value_orange_light">#ffffbb33</string>
    <string name="holo_value_orange_dark">#ffff8800</string>
    <string name="holo_value_blue_bright">#ff00ddff</string>
    <string name="holo_value_gray_dark">#66666666</string>
    <!-- Clock Appearance Preference Screen -->
    <string name="pref_screen_clock_appearance_key">pref_key_clock_appearance</string>
    <string name="pref_clock_appearance_title">Clock Appearance</string>
    <string name="pref_clock_appearance_summary">Edit clock style</string>
    <!-- List Preference Font Type -->
    <string name="pref_font_default_value">@string/font_a</string>
    <string name="pref_font_dialog_title">Digital Clock Font</string>
    <string name="pref_font_key">pref_key_digital_clock_font_style</string>
    <string name="pref_font_summary">Select digital clock font style</string>
    <string name="pref_font_title">Digital Clock Font</string>
    <!-- List Preference Font Color -->
    <string name="pref_font_color_default_value">@string/holo_value_blue_bright</string>
    <string name="pref_font_color_dialog_title">Clock Overlay Color</string>
    <string name="pref_font_color_key">pref_key_digital_clock_color</string>
    <string name="pref_font_color_summary">Select clock color</string>
    <string name="pref_font_color_title">Clock Color</string>
    <!-- Category:App Preference -->
    <string name="pref_category_app_settings_key">pref_key_app_settings</string>
    <string name="pref_category_app_settings_title">Application Preferences</string>
    <!-- Button Preference: Clear Data -->
    <string name="pref_clear_data_key">pref_key_clear_data</string>
    <string name="pref_clear_data_summary">Delete user data and preferences</string>
    <string name="pref_clear_data_title">Clear User Data</string>
    <!-- Screen Preference: App Settings -->
    <string name="pref_screen_app_settings_key">pref_key_app_screen</string>
    <string name="pref_screen_app_settings_summary">Options for deleting user data</string>
    <string name="pref_screen_app_settings_title">Clear Data</string>

    <string name="pref_auto_start_key">pref_key_auto_start</string>
    <string name="pref_auto_start_summary">Automatically start clock</string>
    <string name="pref_auto_start_title">Auto-start</string>

    <!-- Button Preference: Clear Preferences -->
    <string name="pref_clear_preferences_key">pref_key_clear_preferences</string>
    <string name="pref_clear_preferences_summary">Delete preferences only</string>
    <string name="pref_clear_preferences_title">Delete Preferences</string>
    <string name="dialog_delete_preferences">Delete Preferences</string>
    <string name="dialog_delete_preferences_body">Are you sure you want to delete application preferences?</string>
    <!-- Dialog Text -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_clear_user_data">Clear User Data</string>
    <string name="dialog_clear_user_data_body">Are you sure you want to clear all user data?</string>
    <string name="dialog_set_interval_between_alarms">Set Interval Between Alarms</string>
    <string name="dialog_set_snooze_time">Set Snooze Time</string>
    <string name="no_selection">No Selection</string>
    <!-- Ringtone Values -->
    <string name="ringtone_value_1">ratmo01</string>
    <string name="ringtone_value_2">rring01</string>
    <string name="ringtone_value_3">rsvag01</string>
    <string name="ringtone_value_4">rbird01</string>
    <string name="ringtone_value_5">relec01</string>
    <string name="ringtone_value_6">rjazz01</string>
    <string name="ringtone_value_7">rprdm01</string>
    <string name="ringtone_value_none"></string>
    <!-- Ringtone Names -->
    <string name="ringtone_name_1">Chime</string>
    <string name="ringtone_name_2">Bells</string>
    <string name="ringtone_name_3">Beat</string>
    <string name="ringtone_name_4">Mystery</string>
    <string name="ringtone_name_5">Fusion</string>
    <string name="ringtone_name_6">Jazz</string>
    <string name="ringtone_name_7">Tweet</string>
    <string name="ringtone_name_None">System Default</string>
    <!-- Image Button Descriptors -->
    <string name="descriptor_zoom_in_button">Zoom In Button</string>
    <string name="descriptor_zoom_reset_button">Zoom Reset Button</string>
    <string name="descriptor_zoom_out_button">Zoom Out Button</string>
    <!-- List Preference: Ringtones -->
    <string name="pref_ringtones_key">pref_key_ringtones</string>
    <string name="pref_ringtones_title">Notification Sounds</string>
    <string name="pref_ringtones_default">@string/ringtone_value_1</string>
    <string name="pref_ringtontes_summary">Select sound notification from a range of available audio files</string>
    <string name="pref_ringtones_dialog_title">Notification Sound Selection</string>
    <!-- Alarm Dialog -->
    <string name="dialog_alarm_title">Alarm</string>
    <string name="dialog_alarm_body">It\'s time to get up!</string>
    <!-- Default Values -->
    <string name="label_no_data_yet">No user data for today!</string>

    <string name="text_minutes">minutes</string>
    <string name="text_minute">minute</string>

</resources>